--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 :root {
   --bg-color: #f9f7f7;
-  /*  #dbe2ef */
   --fg-color: #112d4e;
   --fg2-color: #3f72af;
   --dark-text-color: #0b1c31;
-  --light-text-color: var(--bg-color);
+  --light-text-color: #dbe2ef;
 }
 
 /* || GENERAL STYLES */
@@ -22,9 +21,9 @@ body {
 }
 
 h1 {
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
-div {
-  font-size: 1rem;
+header {
+  font-size: 1.2rem;
 }
