--- a/src/components/nav-bar.module.css
+++ b/src/components/nav-bar.module.css
@@ -7,6 +7,7 @@ header {
   height: 70px;
   color: var(--light-text-color);
   background-color: var(--fg-color);
+  user-select: none;
 }
 
 .logo {
