--- a/src/components/experience-card.module.css
+++ b/src/components/experience-card.module.css
@@ -49,10 +49,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 15vw;
-  height: 15vw;
-  max-width: 165px;
-  max-height: 165px;
+  width: calc(15vw + 15px);
+  height: calc(15vw + 15px);
+  max-width: 180px;
+  max-height: 180px;
   transition-delay: var(--delay-open2);
   transition-duration: var(--duration-open2);
 }
@@ -96,6 +96,7 @@
   color: #ffffff;
   background-color: var(--fg2-color);
   padding: 2px 5px;
+  user-select: none;
 }
 
 .arrow {
