--- a/src/components/nav-bar.module.css
+++ b/src/components/nav-bar.module.css
@@ -34,6 +34,8 @@ header {
 .navItem {
   margin-left: 10px;
   margin-right: 10px;
+  color: var(--light-text-color);
+  text-decoration: none;
 
   transition: color 0.3s ease;
   cursor: pointer;
