--- a/src/components/timeline.module.css
+++ b/src/components/timeline.module.css
@@ -23,7 +23,7 @@
 .dateInfo {
   position: absolute;
   top: 34px;
-  left: 50px;
+  left: 68px;
   font-weight: 500;
   white-space: nowrap;
   /* color: #ffffff; */
@@ -32,12 +32,6 @@
 
   transition-delay: var(--delay-open2);
   transition-duration: var(--duration-open2);
-}
-
-.hide {
-  opacity: 0;
-  transition-delay: var(--delay-close2);
-  transition-duration: var(--duration-close2);
 }
 
 .point {
@@ -65,6 +59,7 @@
   justify-content: flex-end;
   width: 40px;
   height: 22px;
+  user-select: none;
 }
 
 .arrow {
@@ -83,6 +78,29 @@
   font-weight: 500;
   color: #ffffff;
   z-index: 1;
+}
+
+.months {
+  position: absolute;
+  top: 50%;
+  left: -160px;
+  font-size: 0.9rem;
+  font-weight: 500;
+  white-space: nowrap;
+  color: #ffffff;
+  background-color: var(--fg-color);
+  padding: 2px 5px;
+  user-select: none;
+
+  transform: translate(0, -50%) rotate(-90deg);
+  transition-delay: var(--delay-open2);
+  transition-duration: var(--duration-open2);
+}
+
+.hide {
+  opacity: 0;
+  transition-delay: var(--delay-close2);
+  transition-duration: var(--duration-close2);
 }
 
 @media (min-width: 1100px) {
