--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
 
 /* || GENERAL STYLES */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   display: flex;
   margin: 0;
@@ -15,6 +19,7 @@ body {
   font-size: 16px;
   line-height: 1.3;
   color: var(--dark-text-color);
+  overflow-y: scroll;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
