--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,5 +1,5 @@
 footer {
-  width: 100vw;
+  width: 100%;
   height: 100px;
   color: var(--light-text-color);
   background-color: var(--fg2-color);
