--- a/src/components/nav-bar.module.css
+++ b/src/components/nav-bar.module.css
@@ -3,7 +3,7 @@ header {
   align-items: center;
   justify-content: space-between;
 
-  width: 100vw;
+  width: 100%;
   height: 70px;
   color: var(--light-text-color);
   background-color: var(--fg-color);
