--- a/src/components/education.module.css
+++ b/src/components/education.module.css
@@ -10,6 +10,8 @@
 .logoLine {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .logoBox {
@@ -22,7 +24,7 @@
   background-color: #ffffff;
   padding: 10px 20px;
   border-radius: 20px;
-  margin: 3px 18px;
+  margin: 3px 3px;
   box-shadow: inset 0 0px 8px 0 rgba(0, 0, 0, 0.13);
   cursor: pointer;
 }
@@ -32,7 +34,7 @@
 }
 
 .logoBoxSelected {
-  margin: 0px 15px;
+  margin: 0px 0px;
   border: 3px solid var(--fg2-color);
 }
 
@@ -41,19 +43,55 @@
   max-height: 80%;
 }
 
-.card {
+.slider {
+  width: 500px;
+  padding: 30px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.slides {
   display: flex;
-  flex-direction: column;
+
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+}
+
+.slides::-webkit-scrollbar {
+  width: 0;
+}
+
+.slides::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.slides::-webkit-scrollbar-thumb {
+  background: transparent;
+  border: none;
+}
+
+.wrapper {
+  padding: 10px;
+  position: relative;
+}
+
+.card {
+  scroll-snap-align: center;
+  flex-shrink: 0;
+
+  display: flex;
   justify-content: center;
   align-items: flex-start;
-  width: 50vw;
-  padding: 15px;
-  margin: 30px 0px;
+  flex-direction: column;
 
+  width: 400px;
+  padding: 15px;
+  margin: 10px;
+  margin: 0px 35px;
   border-radius: 20px;
   background-color: #ffffff;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
-  transition-duration: var(--duration-open1);
 }
 
 .cardHeader {
@@ -83,6 +121,13 @@
 
 .description {
   font-size: 0.8rem;
+}
+
+.technologiesWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
 .iconsList {
@@ -133,3 +178,28 @@
 .iconContainer:hover .icons {
   opacity: 0.5;
 }
+
+/* .prevArrow {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.lastArrow  {
+  top: -100px;
+  background-color: tomato;
+}
+a.disabled {
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.3;
+}
+
+.arrowImage {
+  width: 25px;
+  height: 25px;
+}
+
+.turnedArrow {
+  transform: rotate(180deg);
+} */
