Add routes / pages + contact button

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
   --fg2-color: #3f72af;
   --dark-text-color: #0b1c31;
   --light-text-color: #dbe2ef;
+
+  --footer-height: 100px;
 }
 
 /* || GENERAL STYLES */
