--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,6 +1,12 @@
 .app {
+  position: relative;
   background-color: var(--bg-color);
   min-height: 100vh;
+}
+
+.app > div {
+  height: 100%;
+  padding-bottom: var(--footer-height);
 }
 
 .logo {
