--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,6 +1,8 @@
 footer {
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  height: 100px;
+  height: var(--footer-height);
   color: var(--light-text-color);
   background-color: var(--fg2-color);
 
@@ -16,6 +18,19 @@ footer {
 
 .contact {
   place-self: center;
+  padding: 10px 20px;
+  border-radius: 20px;
+  text-decoration: none;
+
+  font-weight: 500;
+  color: var(--light-text-color);
+  background-color: var(--fg-color);
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3);
+}
+
+.contact:hover {
+  color: var(--fg-color);
+  background-color: var(--light-text-color);
 }
 
 .icon {
