--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -21,6 +21,7 @@ footer {
   padding: 10px 20px;
   border-radius: 20px;
   text-decoration: none;
+  user-select: none;
 
   font-weight: 500;
   color: var(--light-text-color);
