--- a/src/components/nav-bar.module.css
+++ b/src/components/nav-bar.module.css
@@ -1,13 +1,24 @@
 header {
-  display: flex;
+  display: grid;
+  grid-template-columns: 70px 2fr 2fr 70px;
+  grid-template-rows: 1fr;
+  justify-items: center;
   align-items: center;
-  justify-content: space-between;
 
   width: 100%;
   height: 70px;
   color: var(--light-text-color);
   background-color: var(--fg-color);
   user-select: none;
+}
+
+.name {
+  margin: 0;
+}
+
+.noNav {
+  grid-column-start: 2;
+  grid-column-end: span 2;
 }
 
 .logo {
