--- a/src/app.module.css
+++ b/src/app.module.css
@@ -5,8 +5,14 @@
 }
 
 .app > div {
-  height: 100%;
+  min-height: calc(100vh - var(--footer-height) - var(--header-height));
+  padding-top: var(--header-height);
   padding-bottom: var(--footer-height);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo {
