--- a/src/components/css/intro.module.css
+++ b/src/components/css/intro.module.css
@@ -1,18 +1,40 @@
 .background {
+  position: relative;
   width: 100%;
-  height: 70vh;
-  padding-bottom: 50px;
-  /* background: linear-gradient(-180deg, var(--fg-color), 80%, var(--fg2-color)); */
-  background-color: var(--fg-color);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 88%);
+  height: 65vh;
+  padding-bottom: 15vh;
+  margin-bottom: 10vh;
 
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
+.figure {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  /* background: linear-gradient(-180deg, var(--fg-color), 80%, var(--fg2-color)); */
+  background-color: var(--fg-color);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 88%);
+  z-index: 0;
+}
+
+.intro {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 70%;
+  z-index: 01;
+}
+
 .presentation {
   display: flex;
+  height: 80%;
+  justify-content: space-around;
   flex-direction: column;
   color: var(--light-text-color);
 }
@@ -20,10 +42,80 @@
 .name {
   font-weight: bold;
   font-size: 2.5rem;
+  margin: 0;
+}
+
+.qualifier {
+  font-weight: 400;
+  line-height: 1.4;
+  font-size: 1.6rem;
+}
+
+.iconList {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.icon {
+  place-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45px;
+  height: 45px;
+
+  border-radius: 45px;
+  background-color: var(--light-text-color);
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.icon:hover {
+  background-color: white;
+}
+
+.logo {
+  object-fit: cover;
+  width: 18px;
+
+  transition: color 0.3s ease;
+  filter: brightness(20%);
 }
 
 .portrait {
-  width: 23vh;
+  width: 250px;
   height: auto;
   border-radius: 10%;
+}
+
+.subhead {
+  position: absolute;
+  top: 65vh;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 45vw;
+  height: 20vh;
+  padding: 10px 20px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.subtitle {
+  font-weight: 600;
+  font-size: 1.6rem;
+}
+
+.description {
+  font-weight: 400;
+  /* letter-spacing: 1.2px; */
+  line-height: 1.5;
+  margin: 0;
+  text-align: justify;
 }
