--- a/src/components/css/nav-bar.module.css
+++ b/src/components/css/nav-bar.module.css
@@ -2,118 +2,84 @@
   position: absolute;
   top: 0;
 
-  display: grid;
-  grid-template-columns: 70px 2fr 2fr 70px;
-  grid-template-rows: 1fr;
-  justify-items: center;
+  display: flex;
+  justify-content: center;
   align-items: center;
 
   width: 100%;
   height: var(--header-height);
-  color: var(--light-text-color);
   background-color: var(--fg-color);
   user-select: none;
 }
 
 .name {
   margin: 0;
+  color: var(--light-text-color);
 }
 
-.noNav {
-  grid-column-start: 2;
-  grid-column-end: span 2;
-}
-
-.logo {
-  width: 40px;
-  height: auto;
-  margin-left: 10px;
-
-  transition: color 0.3s ease;
-  cursor: pointer;
-}
-
-.logo:hover {
-  filter: brightness(200%);
-}
-
-.menuLogo {
+.langMenu {
   position: fixed;
   z-index: 3;
-  top: 15px;
-  left: 10px;
-  transition: all 0.1s linear;
+  top: 0px;
+  left: 88vw;
+
+  transition: top 0.3s ease;
+  user-select: none;
 }
 
-.darkMenuLogo {
-  filter: brightness(20%);
-}
+.langSelector {
+  width: 100px;
+  height: 40px;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  background-color: var(--light-text-color);
 
-.darkMenuLogo:hover {
-  filter: brightness(70%);
-}
-
-.filterPage ~ div {
-  filter: grayscale(50%);
-}
-
-.filterPage ~ footer {
-  filter: grayscale(50%);
-}
-
-.clickablePage {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 4;
-}
-
-.sideBar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 280px;
-  height: 100vh;
-  background-color: var(--fg-color);
-  z-index: 5;
-}
-
-.nav {
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: space-between;
-
-  font-weight: 500;
+  padding-bottom: 2px;
+  transition: background-color 0.2s ease;
 }
 
-.navItem {
-  margin-left: 10px;
-  margin-right: 10px;
-  color: var(--light-text-color);
-  text-decoration: none;
-
-  transition: color 0.3s ease;
-  cursor: pointer;
-}
-
-.navItem:hover {
-  color: var(--bg-color);
-}
-
-.lang {
-  max-width: 25px;
-  height: auto;
-  margin-right: 10px;
-  border-radius: 20px;
-  /* border: 0.05px solid var(--light-text-color); */
+.langLogo {
+  width: 26px;
+  height: 20px;
 
   cursor: pointer;
-  opacity: 0.95;
-  transition: color 0.3s ease;
+  opacity: 0.9;
 }
 
-.lang:hover {
+.langLogo:hover {
   filter: brightness(120%);
+}
+
+.darkLangSelector {
+  background-color: #2c2d30;
+}
+
+.banner > div {
+  position: absolute;
+  top: 50px;
+  left: 26px;
+
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+
+.banner > img {
+  position: absolute;
+  top: 40px;
+  left: 20px;
+
+  width: 30px;
+  height: auto;
+  transition: filter 0.2s ease;
+}
+
+.darkBanner > div {
+  color: var(--light-text-color);
+}
+
+.darkBanner > img {
+  filter: brightness(20%);
 }
