--- a/src/components/css/intro.module.css
+++ b/src/components/css/intro.module.css
@@ -1,9 +1,9 @@
 .background {
   position: relative;
   width: 100%;
-  height: 65vh;
+  height: 70vh;
   padding-bottom: 15vh;
-  margin-bottom: 10vh;
+  margin-bottom: 15vh;
 
   display: flex;
   align-items: center;
@@ -16,9 +16,8 @@
   left: 0px;
   width: 100%;
   height: 100%;
-  /* background: linear-gradient(-180deg, var(--fg-color), 80%, var(--fg2-color)); */
   background-color: var(--fg-color);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 88%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 100px));
   z-index: 0;
 }
 
@@ -91,9 +90,9 @@
 
 .subhead {
   position: absolute;
-  top: 65vh;
+  top: calc(70vh - 100px);
   left: 50%;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, 50%);
   width: 45vw;
   height: 20vh;
   padding: 10px 20px;
