--- a/src/components/css/projects.module.css
+++ b/src/components/css/projects.module.css
@@ -11,22 +11,26 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 
   clip-path: polygon(0 140px, 100% 0, 100% calc(100% - 140px), 0 100%);
-  color: var(--light-text-color);
   background-color: var(--fg-color);
-  transition: height 0.3s ease;
+  transition: height 0.4s ease;
+}
+
+.extendedBackground {
+  height: 65vh;
 }
 
 .button {
-  place-self: center;
+  position: absolute;
   padding: 10px 20px;
   border-radius: 20px;
   text-decoration: none;
   user-select: none;
   cursor: pointer;
   opacity: 1;
-  transition: opacity 0.3s ease;
+  transition: all 0.1s ease;
 
   font-weight: 500;
   color: var(--light-text-color);
@@ -37,4 +41,22 @@
 .button:hover {
   color: var(--fg-color);
   background-color: var(--light-text-color);
+}
+
+.hide {
+  opacity: 0;
+}
+
+.title {
+  margin-top: 0px;
+  margin-bottom: 35px;
+  color: white;
+}
+
+.projectScreen {
+  width: 60vw;
+  height: 70%;
+  border-radius: 30px;
+  background-color: white;
+  box-shadow: inset 0 0px 14px 0px rgba(0, 0, 0, 0.8);
 }
