--- a/src/components/css/experience-card.module.css
+++ b/src/components/css/experience-card.module.css
@@ -23,7 +23,7 @@
   margin: 40px 0px;
 
   border-radius: 20px;
-  background-color: #ffffff;
+  background-color: white;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
   transition-delay: var(--delay-open1);
   transition-duration: var(--duration-open1);
@@ -93,7 +93,7 @@
 
 .location {
   font-size: 0.9rem;
-  color: #ffffff;
+  color: white;
   background-color: var(--fg2-color);
   padding: 2px 5px;
   user-select: none;
