--- a/src/components/css/intro.module.css
+++ b/src/components/css/intro.module.css
@@ -96,7 +96,7 @@
   width: 45vw;
   height: 20vh;
   padding: 10px 20px;
-  background-color: #ffffff;
+  background-color: white;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
   border-radius: 20px;
 
