--- a/src/pages/css/contact-me.module.css
+++ b/src/pages/css/contact-me.module.css
@@ -21,7 +21,7 @@
   margin: 40px;
 
   border-radius: 20px;
-  background-color: #ffffff;
+  background-color: white;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
 }
 
