--- a/src/components/css/education.module.css
+++ b/src/components/css/education.module.css
@@ -156,7 +156,7 @@
   top: 50%;
   max-width: 30px;
   max-height: 30px;
-  transition: all 0.2s linear;
+  transition: filter 0.2s linear;
   border-radius: 50%;
   cursor: pointer;
   filter: brightness(30%);
