--- a/src/components/css/projects.module.css
+++ b/src/components/css/projects.module.css
@@ -55,6 +55,7 @@
 }
 
 .projectScreen {
+  position: relative;
   width: 60vw;
   height: 70%;
   border-radius: 30px;
@@ -217,4 +218,18 @@
 
 .gif {
   object-fit: cover;
+}
+
+.close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  max-width: 30px;
+  max-height: 30px;
+  cursor: pointer;
+  filter: brightness(30%);
+}
+
+.close:hover {
+  filter: brightness(10%);
 }
