--- a/src/components/css/education.module.css
+++ b/src/components/css/education.module.css
@@ -109,13 +109,13 @@
 }
 
 .schoolName {
-  font-size: 1.4rem;
+  font-size: 1.4em;
   font-weight: bold;
   margin-right: 10px;
 }
 
 .location {
-  font-size: 0.9rem;
+  font-size: 0.9em;
   color: white;
   background-color: var(--fg2-color);
   padding: 2px 5px;
@@ -140,7 +140,7 @@
 }
 
 .description {
-  font-size: 0.8rem;
+  font-size: 0.8em;
   text-align: justify;
 }
 
