--- a/src/components/css/footer.module.css
+++ b/src/components/css/footer.module.css
@@ -39,9 +39,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 45px;
-  height: 45px;
-  margin: 10px;
+  width: 40px;
+  height: 40px;
+  margin: 5px;
 
   border-radius: 45px;
   background-color: var(--fg-color);
@@ -55,11 +55,23 @@ footer {
 
 .logo {
   object-fit: cover;
-  width: 18px;
+  width: 15px;
 
   transition: color 0.3s ease;
 }
 
 .icon:hover .logo {
   filter: brightness(10%);
+}
+
+@media (min-width: 992px) {
+  .icon {
+    width: 45px;
+    height: 45px;
+    margin: 10px;
+  }
+
+  .logo {
+    width: 18px;
+  }
 }
