--- a/src/components/css/input.module.css
+++ b/src/components/css/input.module.css
@@ -17,7 +17,7 @@
   padding: 2px 5px;
   border: 1px solid var(--light-text-color);
   font-family: "Montserrat", sans-serif;
-  font-size: 0.8rem;
+  font-size: 0.8em;
 }
 
 .textInput {
