--- a/src/components/css/timeline.module.css
+++ b/src/components/css/timeline.module.css
@@ -82,7 +82,7 @@
 
 .dateYear {
   padding-right: 1px;
-  font-size: 0.9rem;
+  font-size: 0.9em;
   font-weight: 500;
   color: white;
   z-index: 1;
@@ -92,7 +92,7 @@
   position: absolute;
   top: 50%;
   left: -165px;
-  font-size: 0.9rem;
+  font-size: 0.9em;
   font-weight: 500;
   white-space: nowrap;
   color: white;
