--- a/src/components/css/icons-list.module.css
+++ b/src/components/css/icons-list.module.css
@@ -11,9 +11,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 6px;
-  width: 30px;
-  height: 30px;
+  margin-right: 8px;
+  width: 25px;
+  height: 25px;
   position: relative;
 }
 
@@ -26,7 +26,7 @@
   background-color: var(--fg2-color);
 
   position: absolute;
-  top: 22px;
+  top: 20px;
   left: 50%;
   transform: translate(-50%, 0);
   visibility: hidden;
@@ -45,4 +45,25 @@
 
 .iconContainer:hover .icons {
   opacity: 0.5;
+}
+
+@media (max-width: 340px) {
+  .iconContainer {
+    margin: 3px 3px;
+  }
+}
+
+@media (min-width: 992px) {
+  .iconContainer {
+    margin-right: 6px;
+    width: 30px;
+    height: 30px;
+  }
+
+  .iconText {
+    padding: 2px 5px;
+    border-radius: 20px;
+
+    top: 22px;
+  }
 }
