--- a/src/components/css/icons-list.module.css
+++ b/src/components/css/icons-list.module.css
@@ -11,7 +11,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 8px;
+  margin-right: 6px;
+  margin-bottom: 6px;
   width: 25px;
   height: 25px;
   position: relative;
@@ -55,7 +56,6 @@
 
 @media (min-width: 992px) {
   .iconContainer {
-    margin-right: 6px;
     width: 30px;
     height: 30px;
   }
