--- a/src/components/css/education.module.css
+++ b/src/components/css/education.module.css
@@ -10,7 +10,7 @@
 .logoLine {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
 }
 
@@ -18,12 +18,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 120px;
-  height: 60px;
+  width: 18vw;
+  height: 9vw;
+  max-width: 120px;
+  max-height: 60px;
 
   background-color: white;
-  padding: 15px 25px;
-  border-radius: 20px;
+  padding: 10px 15px;
+  border-radius: 15px;
   margin: 3px 3px;
   box-shadow: inset 0 0px 8px 0 rgba(0, 0, 0, 0.13);
   cursor: pointer;
@@ -44,8 +46,8 @@
 }
 
 .slider {
-  width: 500px;
-  padding: 15px 35px;
+  width: 95vw;
+  padding: 15px 0px;
   text-align: center;
   overflow: hidden;
   position: relative;
@@ -78,7 +80,7 @@
   flex-direction: column;
   justify-content: center;
 
-  padding: 10px;
+  padding: 3.5vw;
   padding-top: 25px;
 }
 
@@ -92,10 +94,9 @@
   flex-direction: column;
   position: relative;
 
-  width: 400px;
-  padding: 15px;
-  margin: 10px;
-  margin: 0px 35px;
+  width: 80vw;
+  padding: 4vw;
+  margin: 0px 0vw;
   border-radius: 20px;
   background-color: white;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
@@ -180,4 +181,51 @@
 .nextArrow {
   right: 0px;
   transform: translate(0, -50%) rotate(180deg);
+}
+
+@media (min-width: 900px) {
+  .logoLine {
+    width: 55vw;
+  }
+
+  .logoBox {
+    width: 10vw;
+    height: 5vw;
+
+    padding: 15px 25px;
+    border-radius: 20px;
+  }
+
+  .slider {
+    width: 60vw;
+    padding: 25px 35px;
+  }
+
+  .wrapper {
+    padding: 25px 6vw;
+  }
+
+  .card {
+    width: 45vw;
+    padding: 1.5vw;
+  }
+}
+
+@media (min-width: 1100px) {
+  .logoLine {
+    width: 600px;
+  }
+
+  .slider {
+    width: 650px;
+  }
+
+  .wrapper {
+    padding: 25px 60px;
+  }
+
+  .card {
+    width: 500px;
+    padding: 15px;
+  }
 }
