--- a/src/components/css/intro.module.css
+++ b/src/components/css/intro.module.css
@@ -84,7 +84,7 @@
 
 .portrait {
   width: 55%;
-  max-width: 250px;
+  max-width: 180px;
   height: auto;
   border-radius: 10%;
 }
@@ -131,10 +131,20 @@
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 600px) and (max-height: 750px) {
+  .subhead {
+    top: 400px;
+  }
+}
+
+@media (min-width: 600px) {
   .intro {
     flex-direction: row;
     height: 70%;
+  }
+
+  .portrait  {
+    max-width: 250px;
   }
 
   .icon {
