Add responsive design for contact page

--- a/src/components/css/input.module.css
+++ b/src/components/css/input.module.css
@@ -1,7 +1,7 @@
 .input {
   display: flex;
   flex-direction: column;
-  width: 40vw;
+  width: 70vw;
   justify-content: space-between;
   margin: 8px 0px;
 }
@@ -36,4 +36,10 @@
 
 .required {
   outline: var(--incorrect-color) auto 1px;
+}
+
+@media (min-width: 900px) {
+  .input {
+    width: 40vw;
+  }
 }
