--- a/src/pages/css/contact-me.module.css
+++ b/src/pages/css/contact-me.module.css
@@ -16,9 +16,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50vw;
-  padding: 20px;
-  margin: 40px;
+  width: 80vw;
+  padding: 15px;
+  margin: 30px 0px;
 
   border-radius: 20px;
   background-color: white;
@@ -26,7 +26,7 @@
 }
 
 .requiredMessage {
-  width: 40vw;
+  width: 70vw;
   font-size: 0.9em;
   margin: 12px 0px;
 }
@@ -46,4 +46,16 @@
 
 .submit:hover {
   background-color: var(--fg-color);
+}
+
+@media (min-width: 900px) {
+  .form {
+    width: 50vw;
+    padding: 20px;
+    margin: 40px;
+  }
+
+  .requiredMessage {
+    width: 40vw;
+  }
 }
