--- a/src/components/css/intro.module.css
+++ b/src/components/css/intro.module.css
@@ -27,6 +27,7 @@
   justify-content: space-around;
   margin: 30px 0px;
   width: 100%;
+  height: 90%;
   z-index: 1;
 }
 
@@ -83,7 +84,7 @@
 }
 
 .portrait {
-  width: 55%;
+  width: 55vw;
   max-width: 180px;
   height: auto;
   border-radius: 10%;
@@ -143,8 +144,9 @@
     height: 70%;
   }
 
-  .portrait  {
-    max-width: 250px;
+  .portrait {
+    width: 20vw;
+    max-width: 300px;
   }
 
   .icon {
