--- a/src/components/css/projects.module.css
+++ b/src/components/css/projects.module.css
@@ -33,14 +33,13 @@
   transition: opacity 0.1s ease;
 
   font-weight: 500;
-  color: var(--light-text-color);
-  background-color: var(--fg2-color);
+  color: var(---dark-text-color);
+  background-color: var(--light-text-color);
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3);
 }
 
 .button:hover {
-  color: var(--fg-color);
-  background-color: var(--light-text-color);
+  background-color: white;
 }
 
 .hide {
